--- a/admin/admin.html
+++ b/admin/admin.html
@@ -141,34 +141,54 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Admin Management</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+          <li class="breadcrumb-item active">Admin</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
     <div class="container mt-4">
-      <div class="card">
-          <div class="card-body">
-              <input type="text" id="admin-search" class="form-control mt-3" placeholder="Search by name or username...">
-              <table class="table table-striped">
-                  <thead>
-                      <tr>
-                          <th>Name</th>
-                          <th>Username</th>
-                          <th>Action</th>
-                      </tr>
-                  </thead>
-                  <tbody id="admin-table-body">
-                      <!-- Data will be inserted here -->
-                  </tbody>
-              </table>
+      <h2><span id="displayName" class="badge bg-secondary"></span></h2>
+      
+      <!-- The table will be injected here -->
+      <div id="adminTableContainer"></div>
+  
+      <!-- Admin Details Modal (Used for both Add and Update) -->
+      <div class="modal fade" id="adminDetailsModal" tabindex="-1">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalTitle">Admin Details</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                      <div class="mb-3">
+                          <label for="modalNameInput" class="form-label">Name:</label>
+                          <input type="text" class="form-control" id="modalNameInput">
+                      </div>
+                      <div class="mb-3">
+                          <label for="modalUsernameInput" class="form-label">Username:</label>
+                          <input type="email" class="form-control" id="modalUsernameInput">
+                      </div>
+                      <div class="mb-3">
+                          <label for="modalPasswordInput" class="form-label">Password:</label>
+                          <input type="password" class="form-control" id="modalPasswordInput">
+                          <div class="form-text" id="passwordHelpText">Leave blank to keep the current password</div>
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary" id="saveAdminBtn">Save Changes</button>
+                  </div>
+              </div>
           </div>
       </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   </main>
 
