--- a/admin/vendor.html
+++ b/admin/vendor.html
@@ -141,34 +141,68 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Vendor Management</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+          <li class="breadcrumb-item active">Vendor</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
     <div class="container mt-4">
-      <div class="card">
-          <div class="card-body">
-              <input type="text" id="admin-search" class="form-control mt-3" placeholder="Search by name or username...">
-              <table class="table table-striped">
-                  <thead>
-                      <tr>
-                          <th>Name</th>
-                          <th>Username</th>
-                          <th>Action</th>
-                      </tr>
-                  </thead>
-                  <tbody id="admin-table-body">
-                      <!-- Data will be inserted here -->
-                  </tbody>
-              </table>
+      
+      <!-- The table will be injected here -->
+      <div id="vendorTableContainer"></div>
+  
+      <!-- Vendor Details Modal -->
+      <div class="modal fade" id="vendorDetailsModal" tabindex="-1">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalTitle">Vendor Details</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                      <div class="mb-3">
+                          <label for="modalCompanyInput" class="form-label">Company:</label>
+                          <input type="text" class="form-control" id="modalCompanyInput">
+                      </div>
+                      <div class="mb-3">
+                          <label for="modalUsernameInput" class="form-label">Username:</label>
+                          <input type="email" class="form-control" id="modalUsernameInput">
+                      </div>
+                      <div class="mb-3" id="passwordField">
+                          <label for="modalPasswordInput" class="form-label">Password:</label>
+                          <input type="password" class="form-control" id="modalPasswordInput">
+                          <div class="form-text" id="passwordHelpText">Leave blank to keep the current password</div>
+                      </div>
+                      <div id="dateFields">
+                          <div class="mb-3">
+                              <strong>Date Created:</strong> <span id="modalDateCreated"></span>
+                          </div>
+                          <div class="mb-3">
+                              <strong>Expiration:</strong> <span id="modalExpiration"></span>
+                          </div>
+                      </div>
+                      <div class="mb-3">
+                          <label for="modalStatusSelect" class="form-label">Status:</label>
+                          <select class="form-select" id="modalStatusSelect">
+                              <option value="Activated">Activated</option>
+                              <option value="Deactivated">Deactivated</option>
+                          </select>
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary" id="saveVendorBtn">Save Changes</button>
+                  </div>
+              </div>
           </div>
       </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   </main>
 
@@ -199,6 +233,7 @@
 
 
   <script type="module" src="../assets/js/admin/trucks.js"></script>
+  <script type="module" src="../assets/js/vendor/account.js"></script>
   <script type="module" src="../assets/js/admin/account.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
