--- a/admin/events.html
+++ b/admin/events.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - Producers Connection Logistics Inc.</title>
+  <title>Events - Producers Connection Logistics Inc.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -121,78 +121,97 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Events</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+          <li class="breadcrumb-item active">Events Manage</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
-      <div class="row">
+        <input type="text" id="filterInput" class="filter-input" placeholder="Filter by any column...">
 
-            <!-- Sales Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card users-card">
-                <div class="card-body">
-                  <h5 class="card-title">Events <span>| Status</span></h5>
+    <div class="table-container">
+        <!-- Table -->
+        <table id="myTable">
+            <thead>
+                <tr>
+                    <th>description</th>
+                    <th>Quantity Req.</th>
+                    <th>Quantity Offer</th>
+                    <th>Bid Amount</th>
+                    <th>Rank</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John Doe</td>
+                    <td>28</td>
+                    <td>New York</td>
+                    <td>USA</td>
+                    <td>Engineer</td>
+                </tr>
+                <tr>
+                    <td>Jane Smith</td>
+                    <td>34</td>
+                    <td>London</td>
+                    <td>UK</td>
+                    <td>Designer</td>
+                </tr>
+                <tr>
+                    <td>Samuel Johnson</td>
+                    <td>40</td>
+                    <td>Toronto</td>
+                    <td>Canada</td>
+                    <td>Teacher</td>
+                </tr>
+                <tr>
+                    <td>Alice Brown</td>
+                    <td>22</td>
+                    <td>Berlin</td>
+                    <td>Germany</td>
+                    <td>Developer</td>
+                </tr>
+                <tr>
+                    <td>Mike Davis</td>
+                    <td>45</td>
+                    <td>Paris</td>
+                    <td>France</td>
+                    <td>Architect</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-tools"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>0</h6>
-                      <span class="text-success small pt-1 fw-bold">Total</span> <span class="text-muted small pt-2 ps-1">Events</span>
+    <script>
+        // Filter function
+        document.getElementById('filterInput').addEventListener('keyup', function() {
+            let filter = document.getElementById('filterInput').value.toUpperCase();
+            let table = document.getElementById('myTable');
+            let tr = table.getElementsByTagName('tr');
 
-                    </div>
-                  </div>
-                </div>
+            for (let i = 1; i < tr.length; i++) {
+                let td = tr[i].getElementsByTagName('td');
+                let matchFound = false;
 
-              </div>
-            </div><!-- End Sales Card -->
+                for (let j = 0; j < td.length; j++) {
+                    let textValue = td[j].textContent || td[j].innerText;
+                    if (textValue.toUpperCase().indexOf(filter) > -1) {
+                        matchFound = true;
+                        break;
+                    }
+                }
 
-            <!-- Revenue Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card players-card">
-                <div class="card-body">
-                  <h5 class="card-title">Admin <span>| Status</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-truck"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>0</h6>
-
-                      <span class="text-success small pt-1 fw-bold">Total</span> <span class="text-muted small pt-2 ps-1">Admins</span>
-
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-xxl-4 col-xl-12">
-              <div class="card info-card colleges-card">
-                <div class="card-body">
-                  <h5 class="card-title">Company <span>| Status</span></h5>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-gear"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>0</h6>
-                      <span class="text-success small pt-1 fw-bold">Total</span> <span class="text-muted small pt-2 ps-1">Companies</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
+                if (matchFound) {
+                    tr[i].style.display = '';
+                } else {
+                    tr[i].style.display = 'none';
+                }
+            }
+        });
+    </script>
       </div>
     </section>
 
