--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Login</h2>
             <form id="loginForm">
                 <label for="email">Email:</label>
-                <input id="email" placeholder="Enter your email" required>
+                <input type="email" id="email" placeholder="Enter your email" required>
                 
                 <label for="password">Password:</label>
                 <input type="password" id="password" placeholder="Enter your password" required>
