--- a/admin/adminPage.html
+++ b/admin/adminPage.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false" controlslist="nodownload">
 <!-- ======= Header ======= -->
 <header id="header" class="header fixed-top d-flex align-items-center">
   <div class="d-flex align-items-center justify-content-between">
