--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      
     
 
-    <div class="container">
+    <div class="container" oncontextmenu="return false" controlslist="nodownload">
         <h1 class="logo">
             <span id="procure">Procure</span><span class="x">X</span>
         </h1>
